# misis2023f-22-04-romadova-i-o

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md  temp.cpp
docs/: report.md  singleton_test.cpp
documentation/rtf/: dir_07fa9ae43786e98df6d04e6d19f97a7a.rtf  dir_9c4fc25b1d93d20fee66320350a2f2ef.rtf  dir_eff2c82239f0ee5978f7c40ee2e495bc.rtf  dir_f6c77da222f8f4f2ad9c9011645d93de.rtf  refman.rtf
input_pictures/: test_1.json  test_2.json
prj.codeforces/: 0118a.cpp  0758a.cpp  0831a.cpp  0980a.cpp  1108a.cpp  1353c.cpp  1407a.cpp  1454b.cpp  1543b.cpp  1632b.cpp  1703a.cpp  1703c.cpp  1833c.cpp  1856a.cpp  913a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  Doxyfile  poromarker.cpp  test.txt
prj.cw/porocheck/: CMakeLists.txt  porocheck.cpp
prj.cw/porocheck/include/porocheck/: CMakeLists.txt  porocheck.hpp
prj.test/: CMakeLists.txt  main.cpp  temp.cpp
test_data/example/: test_1.json  test_2.json
