add_executable(0118a "0118a.cpp")
add_executable(0913a "0913a.cpp")
add_executable(0980a "0980a.cpp")
add_executable(0758a "0758a.cpp")
add_executable(1108a 1108a.cpp)
add_executable(1703a 1703a.cpp)
add_executable(1703c 1703c.cpp)
add_executable(1833c 1833c.cpp)
add_executable(1856a 1856a.cpp)
add_executable(1543b 1543b.cpp)
add_executable(1454b 1454b.cpp)

